--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@angularclass/hmr-loader": "^3.0.4",
     "bulma": "^0.5.1",
     "core-js": "^2.4.1",
+    "feathers-client": "^2.3.0",
     "font-awesome": "^4.7.0",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
@@ -92,6 +93,7 @@
     "nanoid": "^0.2.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "~5.0.2",
+    "socket.io-client": "^2.0.3",
     "zone.js": "0.8.14"
   },
   "devDependencies": {
@@ -100,6 +102,7 @@
     "@types/jasmine": "2.5.45",
     "@types/lodash": "^4.14.72",
     "@types/node": "^7.0.39",
+    "@types/socket.io-client": "^1.4.29",
     "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.6.28",
     "@types/webpack": "^2.2.16",
