--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -17,7 +17,10 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@angular/*": ["node_modules/@angular/*"]
+      "@angular/*": ["node_modules/@angular/*"],
+      "@app/*": [
+        "src/app/*"
+      ]
     },
     "typeRoots": [
       "node_modules/@types"
