Form screen update

--- a/src/app/config.json
+++ b/src/app/config.json
@@ -87,8 +87,8 @@
     },
     {
       "element": "checkbox",
-      "prop": "isMandatory",
-      "label": "Mandatory mode"
+      "prop": "isSpecial",
+      "label": "Special mode"
     }
   ]
 }
